<resources>
    <string name="app_name">Asaco2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="BMI">BMI36</string>
    <string name="Cal">カロリー:</string>
    <string name="user">ユーザー名：</string>
    <string name="update">更新する</string>
    <string name="sintyou">身長(cm)：</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">now loading…</string>
    <string name="errortext">もう一度やり直してください</string>
    <string name="foodname">料理名：</string>
    <string name="missteke">やめる</string>
    <string name="filedText">もう一度やり直してください</string>
    <string name="ok">決定</string>
    <string name="todo">TODO</string>

    <string name="join_slack_community">Join Slack Community</string>
    <string name="also_follow_us_on_twitter">Also follow us on Twitter</string>
    <string name="let_s_join_our_community_on_slack">Let\'s Join our Community on Slack</string>
    <string name="welcome_to_mindorks">Welcome to MindOrks!!</string>
    <string name="this_is_persistent_bottom_sheet">This is persistent Bottom Sheet</string>
    <string name="bottom_sheet_dialog_fragment">Bottom Sheet Dialog Fragment</string>
    <string name="bottom_sheet_dialog">Bottom Sheet Dialog</string>
    <string name="bottom_sheet">Bottom Sheet</string>
    <string name="let_s_join_our_community_on_slack2">Let\'s Join our Community on Slack</string>
    <string name="instance_nowtext">%1$s年%2$s月%3$s日</string>
    <string name="nemu">・メニュー</string>
    <string name="walkText">・歩数</string>
    <string name="weight_kg">体重(kg)：</string>
    <string name="age">年齢：</string>
    <string name="mail">男</string>
    <string name="famail">女</string>
    <string name="calendar">カレンダー</string>
    <string name="hosuu">歩数</string>
    <string name="setting">設定</string>
    <string name="barnText">消費⇒%skcal</string>
    <string name="calText">"摂取⇒%skcal"</string>
    <string name="conp">完了しました</string>
    <string name="Day">日</string>
    <string name="Month">月</string>
    <string name="kcal">%skcal</string>
    <string name="sumText">合計：%skcal</string>
    <string name="walkCalText">%s歩</string>
    <string name="total">カロリー差：%skcal</string>
    <string name="bmi">"BMI:%s"</string>
    <string name="error">もう一度やり直してください</string>
    <string name="distanceText">距離</string>
    <string name="dayText">Day</string>
    <string name="monthText">MONTH</string>
    <string name="step">歩</string>
    <string name="camera">撮影</string>
    <string name="km">%skm</string>

</resources>
